--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>kaBeech</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div>Full site under construction! For now, why not 
         <a href="https://www.audiopile.cloud/">check out a cool audio app</a> or 
-        <a href="https://www.kaBeech.com/buddh-a-sketch"> play with a fun toy</a>?</div>
+        <a href="http://www.kaBeech.com/buddh-a-sketch"> play with a fun toy</a>?</div>
 </body>
 </html>
