Update buddh-a-sketch link

--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
 <body>
     <div>Full site under construction! For now, why not 
         <a href="https://www.audiopile.cloud/">check out a cool audio app</a> or 
-        <a href="http://www.kaBeech.com/buddh-a-sketch"> play with a fun toy</a>?</div>
+        <a href="./buddh-a-sketch/index.html"> play with a fun toy</a>?</div>
 </body>
 </html>
