Adjust font, add flex

--- a/index.html
+++ b/index.html
@@ -5,11 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>kaBeech</title>
+    <link rel="icon" type="image/x-icon" href="buddh-a-sketch/BuddhASketch.svg">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div>Full site under construction! For now, why not 
-        <a href="https://www.audiopile.cloud/">check out a cool audio app</a> or 
-        <a href="./buddh-a-sketch/index.html"> play with a fun toy</a>?</div>
+    <div class="flex">
+        <img src="logo.svg" alt="This website is beautiful!">
+        <div class="flex column">
+            <h1>Full site under construction!</h1>
+            <h2>For now, why not
+                <a href="https://www.audiopile.cloud/">check out a cool audio app</a> or
+                <a href="./buddh-a-sketch/index.html"> play with a fun toy</a>?</h2>
+        </div>
+    </div>
 </body>
 </html>
