Add background image

--- a/index.html
+++ b/index.html
@@ -8,15 +8,17 @@
     <link rel="icon" type="image/x-icon" href="buddh-a-sketch/BuddhASketch.svg">
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    <div class="flex">
-        <img src="logo.svg" alt="This website is beautiful!">
-        <div class="flex column">
-            <h1>Full site under construction!</h1>
+<body class="flex column">
+    <div class="flex column">
+        <h1>Full site under construction!</h1>
+        <div id="textBox" class="flex">
+            <img src="logo.svg" alt="This website is beautiful!">  
             <h2>For now, why not
                 <a href="https://www.audiopile.cloud/">check out a cool audio app</a> or
                 <a href="./buddh-a-sketch/index.html"> play with a fun toy</a>?</h2>
         </div>
+    </div>
+    <div>Background photo by <a href="https://unsplash.com/@bartek_16?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Bartek Garbowicz</a> on <a href="https://unsplash.com/s/photos/stars?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
     </div>
 </body>
 </html>
