Add border roundingand adjust sizing

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <a href="./buddh-a-sketch/index.html"> play with a fun toy</a>?</h2>
         </div>
     </div>
-    <div>Background photo by <a href="https://unsplash.com/@bartek_16?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Bartek Garbowicz</a> on <a href="https://unsplash.com/s/photos/stars?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
+    <div id="footer">Background photo by <a href="https://unsplash.com/@bartek_16?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Bartek Garbowicz</a> on <a href="https://unsplash.com/s/photos/stars?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
     </div>
 </body>
 </html>
