Prepare mobile and desktop styles

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body class="flex column">
     <div class="flex column">
         <h1>Full site under construction!</h1>
-        <div id="textBox" class="flex">
+        <div id="panel" class="flex">
             <img src="logo.svg" alt="This website is beautiful!">  
             <h2>For now, why not
                 <a href="https://www.audiopile.cloud/">check out a cool audio app</a> or
