--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>kaBeech</title>
     <link rel="icon" type="image/x-icon" href="buddh-a-sketch/BuddhASketch.svg">
     <link rel="stylesheet" href="style.css">
+    <link id="deviceStyle" rel="stylesheet" href="styleDesktop.css">
+    <script src="./viewSetter.js" defer></script>
 </head>
 <body class="flex column">
     <div class="flex column">
