Revert buddh-a-sketch html naming

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
         <h1>Full site under construction!</h1>
         <div id="panel" class="flex">
             <img src="logo.svg" alt="This website is beautiful!">  
-            <h2>For now, why not
-                <a href="https://www.audiopile.cloud/">check out a cool audio app</a> or
-                <a href="./buddh-a-sketch/buddh-a-sketch.html"> play with a relaxing toy</a>?</h2>
+            <h2>For now, why not <br>
+                <a href="https://www.audiopile.cloud/">check out a cool audio <br> app</a> or
+                <a href="./buddh-a-sketch/index.html"> play with a <br> relaxing toy</a>?</h2>
         </div>
     </div>
     <div id="footer">Background photo by <a href="https://unsplash.com/@bartek_16?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Bartek Garbowicz</a> on <a href="https://unsplash.com/s/photos/stars?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
