--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>kaBeech</title>
-    <link rel="icon" type="image/x-icon" href="buddh-a-sketch/BuddhASketch.svg">
+    <link rel="icon" type="image/x-icon" href="logo.svg">
     <link rel="stylesheet" href="style.css">
     <link id="deviceStyle" rel="stylesheet" href="styleDesktop.css">
     <script src="./viewSetter.js" defer></script>
