--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                 <a id="toyLink" href="./buddh-a-sketch/index.html"> play with a <br> relaxing toy</a>?</h2>
         </div>
     </div>
+    <a id="contactButton" class="flex" href="mailto:contact@kabeech.com">Contact me!</a>
     <div id="footer">Background photo by <a href="https://unsplash.com/@bartek_16?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Bartek Garbowicz</a> on <a href="https://unsplash.com/s/photos/stars?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
     </div>
 </body>
